add v1.2.2 files. edit the README to include High Fives README language. Kept header-injection-code file.

--- a/locales/en.json
+++ b/locales/en.json
@@ -86,5 +86,12 @@
     "Upgrade your account link": "Upgrade your account link",
     "Upgrade Your Account": "Upgrade Your Account",
     "Sign up link": "Sign up link",
-    "Sign Up For Now": "Sign Up For Now"
+    "Sign Up For Now": "Sign Up For Now",
+    "linkedin link": "linkedin link",
+    "bluesky link": "bluesky link",
+    "threads link": "threads link",
+    "mastodon link": "mastodon link",
+    "tiktok link": "tiktok link",
+    "youtube link": "youtube link",
+    "instagram link": "instagram link"
 }
